Fix confusing "allocate" naming in OopStorage

XMLWordPrintable

    • gc
    • b02
    • generic
    • generic

        The review of JDK-8204097 showed that the "allocate list" nomenclature used internally in OopStorage is confusing. It should have been "allocation list". Make the following name changes throughout the implementation of OopStorage:

        AllocateEntry => AllocationListEntry
        AllocateList => AllocationList
        _allocate_entry => _allocation_list_entry
        _allocate_list => _allocation_list
        allocate_entry() => allocation_list_entry()
        allocate_list() => allocation_list()
          -- these functions are particularly confusing, since they don't
             allocate anything.

              Assignee:
              Kim Barrett
              Reporter:
              Kim Barrett
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

                Created:
                Updated:
                Resolved: