8204834: Fix confusing "allocate" naming in OopStorage

Allocate_list => allocation_list and so on.

Reviewed-by: dholmes, tschatzl, coleenp